--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
     "development": {
-        "username": "root",
-        "password": null,
-        "database": "rezqs",
-        "host": "127.0.0.1",
+        "username": "e4fod9z3kzo07g3g",
+        "password": "haeies6upqaropaq",
+        "database": "ziw4nhdgj4dcclmv",
+        "host": "p2d0untihotgr5f6.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
         "port": 3306,
         "dialect": "mysql"
     },
