--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jwks-rsa": "^1.2.0",
     "morgan": "~1.8.1",
     "mysql2": "^1.4.2",
+    "nodemon": "^1.12.1",
     "sequelize": "^4.11.5",
     "serve-favicon": "~2.4.2",
     "tunnel-ssh": "^4.1.3"
